# CleoCog

./: .gitignore  README.md
Frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Frontend/src/api/: query.ts  upload.ts
Frontend/src/hooks/: useChat.ts  useUpload.ts
Frontend/src/store/: chat.ts
Frontend/src/utils/: vars.ts
client/: .env.example  package-lock.json  package.json
client/src/app/: layout.js
client/src/context/: AuthContext.js
client/src/lib/: auth.js  firebase.js
database/: docker-compose.yml  init.sql
database/test-db/: test.py
kubernetes/: backend-secret.yml  backend.yml  dbmicroservice-secret.yml  dbmicroservice.yml  extractor-secret.yml  extractormicroservice.yml
server/: .gitignore
server/BackendSerice/: .env.example  main.py  requirements.txt
server/DBService/: .env.example  main.py  requirements.txt
server/EmbeddingService/: .dockerignore  .env.example  .pre-commit-config.yaml  DockerFile  main.py  mypy.ini  pyprojec-backupt.toml  pyproject.toml  requirements-backup.txt  requirements.txt
server/EmbeddingService/app/: main.py
server/EmbeddingService/app/api/v1/: api_router.py
server/EmbeddingService/app/api/v1/endpoints/: embed.py  health.py
server/EmbeddingService/app/schemas/: embed.py
server/EmbeddingService/app/services/: embedder.py
server/EmbeddingService/app/utils/: config.py  logger.py
server/ExtractorService/: .env.example  lambda_function.py  main.py  requirements.txt
server/LLMPromptService/: .env.example  main.py  requirements-langchain.txt  requirements.txt
(+6 files in other folders)
