[tool.poetry]
name = "embeddingservice"
version = "1.0.0"
description = "EMBEDDING"
authors = ["Manav Khandurie <manavkhandurie@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.0"}
sentence-transformers = "^4.1.0"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-embedding-service = "app.main:run_server"

[tool.black]
line-length = 88
target-version = ['py38']  # Change as needed (py39, py310 etc.)
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[tool.isort]
profile = "black"  
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
